--- a/CSS-HTML-projects/social-proof/draft.html
+++ b/CSS-HTML-projects/social-proof/draft.html
@@ -2,29 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-
-    <title>Frontend Mentor | Social proof section</title>
-
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-
-    <!-- CSS File -->
-    <link rel="stylesheet" href="./style.css" />
+    <title>Document</title>
   </head>
-  <body class="container">
-    <!-- Product section -->
+  <body>
+    <!-- hero section -->
     <section class="product">
       <!-- Product Details -->
       <div class="product__details">
@@ -79,6 +62,7 @@
         </div>
       </div>
     </section>
+
     <!-- testimonial section -->
     <section class="testimonial">
       <!-- testimonial 1 -->
@@ -149,6 +133,7 @@
         </div>
       </div>
     </section>
+
     <!-- footer -->
     <footer class="footer">
       <div class="attribution">
