--- a/CSS-HTML-projects/testimonials-grid/index.html
+++ b/CSS-HTML-projects/testimonials-grid/index.html
@@ -19,21 +19,11 @@
     />
 
     <!-- CSS Link -->
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <title>Frontend Mentor | [Challenge Name Here]</title>
-
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
-  <body>
+  <body class="container">
     <section class="testimonial">
       <!-- Testimonial Card 1 -->
       <div class="testimonial__card testimonial__card--1">
@@ -175,7 +165,8 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Samuel Oyediran</a>.
+        >. Coded by
+        <a href="https://github.com/soyed" target="_blank">Samuel Oyediran</a>.
       </p>
     </footer>
   </body>
