completed the desktop layout for social proof

--- a/CSS-HTML-projects/social-proof/index.html
+++ b/CSS-HTML-projects/social-proof/index.html
@@ -82,7 +82,7 @@
     <!-- testimonial section -->
     <section class="testimonial">
       <!-- testimonial 1 -->
-      <div class="testimonial__card testimonial__card-1">
+      <div class="testimonial__card testimonial__card--1">
         <!-- testimonial Profile -->
         <div class="testimonial__card--header">
           <!-- profile image -->
@@ -91,20 +91,18 @@
           </div>
           <!-- profile name -->
           <div class="testimonial__card--header__content">
-            <p>Colton Smith</p>
+            <h3>Colton Smith</h3>
             <p>Verified Buyer</p>
           </div>
         </div>
         <!-- testimonial content -->
-        <div class="testimonial__card--content">
-          <p class="testimonial__card--content__para">
-            " We needed the same printed design as the one we had ordered a week
-            prior. Not only did they not find the original order, but we also
-            received it in time. Excellent! "
-          </p>
-        </div>
+        <p class="testimonial__card--para">
+          " We needed the same printed design as the one we had ordered a week
+          prior. Not only did they not find the original order, but we also
+          received it in time. Excellent! "
+        </p>
       </div>
-      <div class="testimonial__card testimonial__card-2">
+      <div class="testimonial__card testimonial__card--2">
         <!-- testimonial Profile -->
         <div class="testimonial__card--header">
           <!-- profile image -->
@@ -113,20 +111,18 @@
           </div>
           <!-- profile name -->
           <div class="testimonial__card--header__content">
-            <p>Irene Roberts</p>
+            <h3>Irene Roberts</h3>
             <p>Verified Buyer</p>
           </div>
         </div>
         <!-- testimonial content -->
-        <div class="testimonial__card--content">
-          <p class="testimonial__card--content__para">
-            " Customer service is always excellent and very quick turn around.
-            Completely delighted with the simplicity of the purchase and the
-            speed of delivery. "
-          </p>
-        </div>
+        <p class="testimonial__card--para">
+          " Customer service is always excellent and very quick turn around.
+          Completely delighted with the simplicity of the purchase and the speed
+          of delivery. "
+        </p>
       </div>
-      <div class="testimonial__card testimonial__card-3">
+      <div class="testimonial__card testimonial__card--3">
         <!-- testimonial Profile -->
         <div class="testimonial__card--header">
           <!-- profile image -->
@@ -135,29 +131,27 @@
           </div>
           <!-- profile name -->
           <div class="testimonial__card--header__content">
-            <p>Anne Wallace</p>
+            <h3>Anne Wallace</h3>
             <p>Verified Buyer</p>
           </div>
         </div>
         <!-- testimonial content -->
-        <div class="testimonial__card--content">
-          <p class="testimonial__card--content__para">
-            " Put an order with this company and can only praise them for the
-            very high standard. Will definitely use them again and recommend
-            them to everyone! "
-          </p>
-        </div>
+        <p class="testimonial__card--para">
+          " Put an order with this company and can only praise them for the very
+          high standard. Will definitely use them again and recommend them to
+          everyone! "
+        </p>
       </div>
     </section>
     <!-- footer -->
     <footer class="footer">
-      <div class="attribution">
+      <p class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by
         <a href="https://github.com/soyed" target="_blank">Samuel Oyediran</a>.
-      </div>
+      </p>
     </footer>
   </body>
 </html>
