fixing HTML issues on social proof and testimonial grid

--- a/CSS-HTML-projects/testimonials-grid/index.html
+++ b/CSS-HTML-projects/testimonials-grid/index.html
@@ -21,11 +21,11 @@
     <!-- CSS Link -->
     <link rel="stylesheet" href="./style.css" />
 
-    <title>Frontend Mentor | [Challenge Name Here]</title>
+    <title>Frontend Mentor | Testimonial Grid</title>
   </head>
   <body>
     <main class="container" role="main">
-      <section class="testimonial">
+      <div class="testimonial">
         <!-- Testimonial Card 1 -->
         <div class="testimonial__card testimonial__card--1">
           <div class="testimonial__card--header">
@@ -160,7 +160,7 @@
             </p>
           </div>
         </div>
-      </section>
+      </div>
 
       <footer class="footer">
         <p class="attribution">
