setting up layout for sunnyside agency

--- a/CSS-HTML-projects/sunnyside-agency/index.html
+++ b/CSS-HTML-projects/sunnyside-agency/index.html
@@ -24,31 +24,304 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    About Services Projects Contact We are creatives Transform your brand We are
-    a full-service creative agency specializing in helping brands grow fast.
-    Engage your clients through compelling visuals that do most of the marketing
-    for you. Learn more Stand out to the right audience Using a collaborative
-    formula of designers, researchers, photographers, videographers, and
-    copywriters, we’ll build and extend your brand in digital places. Learn more
-    Graphic design Great design makes you memorable. We deliver artwork that
-    underscores your brand message and captures potential clients’ attention.
-    Photography Increase your credibility by getting the most stunning,
-    high-quality photos that improve your business image. Client testimonials We
-    put our trust in Sunnyside and they delivered, making sure our needs were
-    met and deadlines were always hit. Emily R. Marketing Director Sunnyside’s
-    enthusiasm coupled with their keen interest in our brand’s success made it a
-    satisfying and enjoyable experience. Thomas S. Chief Operating Officer
-    Incredible end result! Our sales increased over 400% when we worked with
-    Sunnyside. Highly recommended! Jennie F. Business Owner About Services
-    Projects Contact
+    <main class="container">
+      <!-- Hero  -->
 
-    <footer class="footer">
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#" target="_blank">Samuel Oyediran.</a>.
+      <header class="header">
+        <!-- Header Title -->
+        <h2 class="header--title">Sunnyside</h2>
+        <!-- Header Nav  -->
+        <div class="header--nav">
+          <ul class="header--nav__list">
+            <li class="header--nav__list--item">About</li>
+            <li class="header--nav__list--item">Services</li>
+            <li class="header--nav__list--item">Projects</li>
+            <button
+              class="header--nav__contact--btn"
+              aria-label="Contact Us Button"
+            >
+              Contact
+            </button>
+          </ul>
+        </div>
+        <!-- Header Checkbook -->
+        <input type="checkbox" name="header--nav" id="header--nav" />
+        <!-- Header Hamburger -->
+
+        <!-- Header Section -->
+        <section class="hero__main">
+          <h1 class="hero__main--title">We are Creatives</h1>
+
+          <!-- the white mark -->
+          <div></div>
+        </section>
+      </header>
+
+      <!-- Services -->
+      <section class="services">
+        <div class="services__card services__card--1">
+          <h2 class="services__card--title">Transform your brand</h2>
+          <p class="services__card--para">
+            We are a full-service creative agency specializing in helping brands
+            grow fast. Engage your clients through compelling visuals that do
+            most of the marketing for you.
+          </p>
+          <a href="#" class="services__card--link" aria-label="Learn more link"
+            >Learn more</a
+          >
+        </div>
+        <div class="services__card services__card--2">
+          <!-- <div class="services__card--content">
+            <img
+              src="./images/desktop/image-transform.jpg"
+              alt="An image containing a white egg on a yellow background."
+              title="Egg Image"
+              class="active--image"
+            />
+            <img
+              src="./images/mobile/image-transform.jpg"
+              alt="An image containing a white egg on a yellow background."
+              title="Egg Image"
+              class="hidden-image"
+            />
+          </div> -->
+        </div>
+        <div class="services__card services__card--3">
+          <!-- <div class="services__card--content">
+            <img
+              src="./images/desktop/image-stand-out.jpg"
+              alt="An image containing a light pink wine cup on a dark pink background."
+              title="Wine Cup Image"
+              class="active--image"
+            />
+            <img
+              src="./images/mobile/image-stand-out.jpg"
+              alt="An image containing a light pink wine cup on a dark pink background."
+              title="Wine Cup Image"
+              class="hidden-image"
+            />
+          </div> -->
+        </div>
+        <div class="services__card services__card--4">
+          <h2 class="services__card--title">Stand out to the right audience</h2>
+          <p class="services__card--para">
+            Using a collaborative formula of designers, researchers,
+            photographers, videographers, and copywriters, we'll build and
+            extend your brand in digital places.
+          </p>
+          <a href="#" class="services__card--link" aria-label="Learn more link"
+            >Learn more</a
+          >
+        </div>
+        <div class="services__card services__card--5">
+          <h2 class="services__card--title">Graphic Design</h2>
+          <p class="services__card--para">
+            Great design makes you memorable. We deliver artwork that
+            underscores your brand message and captures potential client's
+            attention.
+          </p>
+        </div>
+        <div class="services__card services__card--6">
+          <h2 class="services__card--title">Photography</h2>
+          <p class="services__card--para">
+            Increase your credibility by getting the most stunning, high-quality
+            photos that improve your business image.
+          </p>
+        </div>
+      </section>
+      <!-- Testimonials -->
+      <section class="testimonials">
+        <div class="testimonials__heading">
+          <h3 class="testimonials__heading--title">Client Testimonials</h3>
+        </div>
+        <div class="testimonials__content">
+          <div class="testimonials__content--card">
+            <div class="testimonials__content--card__heading">
+              <img
+                src="./images/image-emily.jpg"
+                alt="A photo of Emily in a flower patterned shirt"
+                title="Emily R's photo"
+              />
+            </div>
+            <div class="testimonial__content--card__message">
+              We put our trust in Sunnyside and they delivered, making sure our
+              needs were met and deadlines were always hit.
+            </div>
+            <div class="testimonial__content--card__title">
+              <h4>Emily R.</h4>
+              <p>Marketing Director</p>
+            </div>
+          </div>
+          <div class="testimonials__content--card">
+            <div class="testimonials__content--card__heading">
+              <img
+                src="./images/image-thomas.jpg"
+                alt="A photo of Thomas in white t-shirt in a grayish background."
+                title="Emily R's photo"
+              />
+            </div>
+            <div class="testimonial__content--card__message">
+              Sunnyside's enthusiasm coupled with their keen interest in our
+              brand's success made it a satisfying and enjoyable experience.
+            </div>
+            <div class="testimonial__content--card__title">
+              <h4>Thomas S.</h4>
+              <p>Chief Operating Officer</p>
+            </div>
+          </div>
+          <div class="testimonials__content--card">
+            <div class="testimonials__content--card__heading">
+              <img
+                src="./images/image-jennie.jpg"
+                alt="A photo of Jennie in a black top"
+                title="Emily R's photo"
+              />
+            </div>
+            <div class="testimonial__content--card__message">
+              Incredible end result! Our sales increased over 400% when we
+              worked with Sunnyside. Highly recommended!
+            </div>
+            <div class="testimonial__content--card__title">
+              <h4>Jennie F.</h4>
+              <p>Business Owner</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Gallery  -->
+      <div class="gallery">
+        <div class="gallery__item gallery__item--1">
+          <img
+            src="./images/desktop/image-gallery-milkbottles.jpg"
+            aria-labelledby="gallery__item--bottle"
+            title="Milk Bottles"
+            class="active--image"
+          />
+          <img
+            src="./images/mobile/image-gallery-milkbottles.jpg"
+            aria-labelledby="gallery__item--bottle"
+            title="Milk Bottles"
+            class="hidden--image"
+          />
+          <p id="gallery__item--bottle">
+            A image containing milk bottles in a sky blue background with some
+            clouds displaying.
+          </p>
+        </div>
+        <div class="gallery__item gallery__item--2">
+          <img
+            src="./images/desktop/image-gallery-orange.jpg"
+            aria-labelledby="gallery__item--orange"
+            title="Orange"
+            class="active--image"
+          />
+          <img
+            src="./images/mobile/image-gallery-orange.jpg"
+            aria-labelledby="gallery__item--orange"
+            title="Orange Image"
+            class="hidden--image"
+          />
+          <p id="gallery__item--orange">
+            A image containing half an orange placed inside a white and sky blue
+            dish, in an orange background.
+          </p>
+        </div>
+        <div class="gallery__item gallery__item--3">
+          <img
+            src="./images/desktop/image-gallery-cone.jpg"
+            aria-labelledby="gallery__item--cone"
+            title="Ice cream cone Image"
+            class="active--image"
+          />
+          <img
+            src="./images/mobile/image-gallery-cone.jpg"
+            aria-labelledby="gallery__item--cone"
+            title="Ice cream cone Image"
+            class="hidden--image"
+          />
+          <p id="gallery__item--cone">
+            A image containing an ice cream cone in a sky blue background.
+          </p>
+        </div>
+        <div class="gallery__item gallery__item--4">
+          <img
+            src="./images/desktop/image-gallery-sugarcubes.jpg"
+            aria-labelledby="gallery__item--cone"
+            title="Sugar Cubes Image"
+            class="active--image"
+          />
+          <img
+            src="./images/mobile/image-gallery-sugarcubes.jpg"
+            aria-labelledby="gallery__item--cone"
+            title="Sugar Cubes Image"
+            class="hidden--image"
+          />
+          <p id="gallery__item--cone">
+            A image containing sugar cubes in a pink background.
+          </p>
+        </div>
       </div>
-    </footer>
+      <!-- Footer -->
+      <footer class="footer">
+        <div class="footer__heading">
+          <h2 class="footer__heading--title">Sunnyside</h2>
+        </div>
+        <div class="footer__services">
+          <p class="footer__services--para">About</p>
+          <p class="footer__services--para">Services</p>
+          <p class="footer__services--para">Projects</p>
+        </div>
+
+        <div class="footer__socials">
+          <ul class="footer__social--list">
+            <li class="footer__social--list__item">
+              <a href="#" aria-label="Facebook Icon">
+                <img
+                  src="./images/icon-facebook.svg"
+                  alt="Facebook icon with a light green fill and dark green background"
+                  title="Facebook Icon"
+                />
+              </a>
+            </li>
+            <li class="footer__social--list__item">
+              <a href="#" aria-label="Instagram Icon">
+                <img
+                  src="./images/icon-instagram.svg"
+                  alt="Instagram icon with a light green fill and dark green border"
+                  title="Instagram Icon"
+                />
+              </a>
+            </li>
+            <li class="footer__social--list__item">
+              <a href="#" aria-label="Twitter Icon">
+                <img
+                  src="./images/icon-twitter.svg"
+                  alt="Twitter icon with a dark green fill"
+                  title="Instagram Icon"
+                />
+              </a>
+            </li>
+            <li class="footer__social--list__item">
+              <a href="#" aria-label="PInterest Icon">
+                <img
+                  src="./images/icon-pinterest.svg"
+                  alt="PInterest icon with a dark green fill and a light green text"
+                  title="PInterest Icon"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by
+          <a href="https:/github.com/soyed" target="_blank">Samuel Oyediran.</a
+          >.
+        </div>
+      </footer>
+    </main>
   </body>
 </html>
