completed the testimonials and gallery, fully responsive across all screen sizes

--- a/CSS-HTML-projects/sunnyside-agency/index.html
+++ b/CSS-HTML-projects/sunnyside-agency/index.html
@@ -132,59 +132,64 @@
       <!-- Testimonials -->
       <section class="testimonials">
         <div class="testimonials__heading">
-          <h3 class="testimonials__heading--title">Client Testimonials</h3>
+          <h2 class="testimonials__heading--title">Client Testimonials</h2>
         </div>
-        <div class="testimonials__content">
-          <div class="testimonials__content--card">
-            <div class="testimonials__content--card__heading">
-              <img
-                src="./images/image-emily.jpg"
-                alt="A photo of Emily in a flower patterned shirt"
-                title="Emily R's photo"
-              />
-            </div>
-            <div class="testimonial__content--card__message">
+
+        <div class="testimonials--card">
+          <div class="testimonials--card__heading">
+            <img
+              src="./images/image-emily.jpg"
+              alt="A photo of Emily in a flower patterned shirt"
+              title="Emily R's photo"
+            />
+          </div>
+          <div class="testimonials--card__message">
+            <p>
               We put our trust in Sunnyside and they delivered, making sure our
               needs were met and deadlines were always hit.
-            </div>
-            <div class="testimonial__content--card__title">
-              <h4>Emily R.</h4>
-              <p>Marketing Director</p>
-            </div>
+            </p>
           </div>
-          <div class="testimonials__content--card">
-            <div class="testimonials__content--card__heading">
-              <img
-                src="./images/image-thomas.jpg"
-                alt="A photo of Thomas in white t-shirt in a grayish background."
-                title="Emily R's photo"
-              />
-            </div>
-            <div class="testimonial__content--card__message">
+          <div class="testimonials--card__title">
+            <h3>Emily R.</h3>
+            <p>Marketing Director</p>
+          </div>
+        </div>
+        <div class="testimonials--card">
+          <div class="testimonials--card__heading">
+            <img
+              src="./images/image-thomas.jpg"
+              alt="A photo of Thomas in white t-shirt in a grayish background."
+              title="Emily R's photo"
+            />
+          </div>
+          <div class="testimonials--card__message">
+            <p>
               Sunnyside's enthusiasm coupled with their keen interest in our
               brand's success made it a satisfying and enjoyable experience.
-            </div>
-            <div class="testimonial__content--card__title">
-              <h4>Thomas S.</h4>
-              <p>Chief Operating Officer</p>
-            </div>
+            </p>
           </div>
-          <div class="testimonials__content--card">
-            <div class="testimonials__content--card__heading">
-              <img
-                src="./images/image-jennie.jpg"
-                alt="A photo of Jennie in a black top"
-                title="Emily R's photo"
-              />
-            </div>
-            <div class="testimonial__content--card__message">
+          <div class="testimonials--card__title">
+            <h3>Thomas S.</h3>
+            <p>Chief Operating Officer</p>
+          </div>
+        </div>
+        <div class="testimonials--card">
+          <div class="testimonials--card__heading">
+            <img
+              src="./images/image-jennie.jpg"
+              alt="A photo of Jennie in a black top"
+              title="Emily R's photo"
+            />
+          </div>
+          <div class="testimonials--card__message">
+            <p>
               Incredible end result! Our sales increased over 400% when we
               worked with Sunnyside. Highly recommended!
-            </div>
-            <div class="testimonial__content--card__title">
-              <h4>Jennie F.</h4>
-              <p>Business Owner</p>
-            </div>
+            </p>
+          </div>
+          <div class="testimonials--card__title">
+            <h3>Jennie F.</h3>
+            <p>Business Owner</p>
           </div>
         </div>
       </section>
@@ -195,15 +200,14 @@
             src="./images/desktop/image-gallery-milkbottles.jpg"
             aria-labelledby="gallery__item--bottle"
             title="Milk Bottles"
-            class="active--image"
           />
           <img
             src="./images/mobile/image-gallery-milkbottles.jpg"
             aria-labelledby="gallery__item--bottle"
             title="Milk Bottles"
-            class="hidden--image"
+            class="hidden"
           />
-          <p id="gallery__item--bottle">
+          <p id="gallery__item--bottle" class="hidden">
             A image containing milk bottles in a sky blue background with some
             clouds displaying.
           </p>
@@ -213,15 +217,14 @@
             src="./images/desktop/image-gallery-orange.jpg"
             aria-labelledby="gallery__item--orange"
             title="Orange"
-            class="active--image"
           />
           <img
             src="./images/mobile/image-gallery-orange.jpg"
             aria-labelledby="gallery__item--orange"
             title="Orange Image"
-            class="hidden--image"
+            class="hidden"
           />
-          <p id="gallery__item--orange">
+          <p id="gallery__item--orange" class="hidden">
             A image containing half an orange placed inside a white and sky blue
             dish, in an orange background.
           </p>
@@ -231,32 +234,30 @@
             src="./images/desktop/image-gallery-cone.jpg"
             aria-labelledby="gallery__item--cone"
             title="Ice cream cone Image"
-            class="active--image"
           />
           <img
             src="./images/mobile/image-gallery-cone.jpg"
             aria-labelledby="gallery__item--cone"
             title="Ice cream cone Image"
-            class="hidden--image"
+            class="hidden"
           />
-          <p id="gallery__item--cone">
+          <p id="gallery__item--cone" class="hidden">
             A image containing an ice cream cone in a sky blue background.
           </p>
         </div>
         <div class="gallery__item gallery__item--4">
           <img
             src="./images/desktop/image-gallery-sugarcubes.jpg"
-            aria-labelledby="gallery__item--cone"
+            aria-labelledby="gallery__item--sugar"
             title="Sugar Cubes Image"
-            class="active--image"
           />
           <img
-            src="./images/mobile/image-gallery-sugarcubes.jpg"
-            aria-labelledby="gallery__item--cone"
+            src="./images/mobile/image-gallery-sugar-cubes.jpg"
+            aria-labelledby="gallery__item--sugar"
             title="Sugar Cubes Image"
-            class="hidden--image"
+            class="hidden"
           />
-          <p id="gallery__item--cone">
+          <p id="gallery__item--cone" class="hidden">
             A image containing sugar cubes in a pink background.
           </p>
         </div>
