completed footer, fully responsive across all screens

--- a/CSS-HTML-projects/sunnyside-agency/index.html
+++ b/CSS-HTML-projects/sunnyside-agency/index.html
@@ -267,16 +267,20 @@
         <div class="footer__heading">
           <h2 class="footer__heading--title">Sunnyside</h2>
         </div>
-        <div class="footer__services">
-          <p class="footer__services--para">About</p>
-          <p class="footer__services--para">Services</p>
-          <p class="footer__services--para">Projects</p>
+        <div class="footer__links">
+          <p class="footer__links--para">About</p>
+          <p class="footer__links--para">Services</p>
+          <p class="footer__links--para">Projects</p>
         </div>
 
-        <div class="footer__socials">
+        <div class="footer__social">
           <ul class="footer__social--list">
             <li class="footer__social--list__item">
-              <a href="#" aria-label="Facebook Icon">
+              <a
+                href="https://facebook.com"
+                aria-label="Facebook Icon"
+                target="_blank"
+              >
                 <img
                   src="./images/icon-facebook.svg"
                   alt="Facebook icon with a light green fill and dark green background"
@@ -285,7 +289,11 @@
               </a>
             </li>
             <li class="footer__social--list__item">
-              <a href="#" aria-label="Instagram Icon">
+              <a
+                href="https://instagram.com"
+                aria-label="Instagram Icon"
+                target="_blank"
+              >
                 <img
                   src="./images/icon-instagram.svg"
                   alt="Instagram icon with a light green fill and dark green border"
@@ -294,7 +302,11 @@
               </a>
             </li>
             <li class="footer__social--list__item">
-              <a href="#" aria-label="Twitter Icon">
+              <a
+                href="https://twitter.com"
+                aria-label="Twitter Icon"
+                target="_blank"
+              >
                 <img
                   src="./images/icon-twitter.svg"
                   alt="Twitter icon with a dark green fill"
@@ -303,7 +315,11 @@
               </a>
             </li>
             <li class="footer__social--list__item">
-              <a href="#" aria-label="PInterest Icon">
+              <a
+                href="https://pinterest.com"
+                aria-label="PInterest Icon"
+                target="_blank"
+              >
                 <img
                   src="./images/icon-pinterest.svg"
                   alt="PInterest icon with a dark green fill and a light green text"
@@ -314,14 +330,13 @@
           </ul>
         </div>
 
-        <div class="footer__attribution">
+        <p class="footer__attribution">
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
           >. Coded by
-          <a href="https:/github.com/soyed" target="_blank">Samuel Oyediran.</a
-          >.
-        </div>
+          <a href="https:/github.com/soyed" target="_blank">Samuel Oyediran.</a>
+        </p>
       </footer>
     </main>
   </body>
