--- a/CSS-HTML-projects/FAQ-Accordion/index.html
+++ b/CSS-HTML-projects/FAQ-Accordion/index.html
@@ -38,102 +38,113 @@
   </head>
   <body>
     <main class="container">
-      <section class="faq">
-        <!-- FAQ IMAGE -->
-        <div class="faq__image"></div>
+      <div class="faq-container">
+        <div class="faq">
+          <!-- FAQ IMAGE -->
+          <div class="faq__image">
+            <img src="./images/illustration-box-desktop.svg" alt="" />
+            <img src="./images/illustration-woman-online-desktop.svg" alt="" />
+            <img src="./images/bg-pattern-desktop.svg" alt="" />
+          </div>
+          <!-- FAQ Content -->
+          <div class="faq__content">
+            <h1 class="faq__content--title">FAQ</h1>
 
-        <!-- FAQ Content -->
-        <div class="faq__content">
-          <h1 class="faq__content--title">FAQ</h1>
-
-          <div class="faq__content--list">
-            <div class="faq__content--list__card faq_content--list__card-1">
-              <div class="faq__content--list__card--question">
-                <p>How many team members can I invite?</p>
-                <img
-                  src="./images/icon-arrow-down.svg"
-                  alt="An orange arrow icon"
-                  title="Arrow Icon"
-                />
+            <div class="faq__content-container">
+              <div class="faq__content--card faq--active">
+                <div class="faq__content--card__question">
+                  <p>How many team members can I invite?</p>
+                  <img
+                    src="./images/icon-arrow-down.svg"
+                    alt="An orange arrow icon"
+                    title="Arrow Icon"
+                  />
+                </div>
+                <div class="faq__content--card__answer">
+                  <p>
+                    You can invite up to 2 additional users on the Free plan.
+                    There is no limit on team members for the Premium plan.
+                  </p>
+                </div>
+                <span></span>
               </div>
-              <div class="faq__content--list__card--answer hidden">
-                <p>
-                  You can invite up to 2 additional users on the Free plan.
-                  There is no limit on team members for the Premium plan.
-                </p>
+              <div class="faq__content--card">
+                <div class="faq__content--card__question">
+                  <p>What is the maximum file upload size?</p>
+                  <img
+                    src="./images/icon-arrow-down.svg"
+                    alt="An orange arrow icon"
+                    title="Arrow Icon"
+                  />
+                </div>
+                <div class="faq__content--card__answer">
+                  <p>
+                    No more than 2GB. All files in your account must fit your
+                    allotted storage space.
+                  </p>
+                </div>
+                <span></span>
               </div>
-            </div>
-            <div class="faq__content--list__card faq_content--list__card-2">
-              <div class="faq__content--list__card--question">
-                <p>What is the maximum file upload size?</p>
-                <img
-                  src="./images/icon-arrow-down.svg"
-                  alt="An orange arrow icon"
-                  title="Arrow Icon"
-                />
+              <div class="faq__content--card">
+                <div class="faq__content--card__question">
+                  <p>How do I reset my password?</p>
+                  <img
+                    src="./images/icon-arrow-down.svg"
+                    alt="An orange arrow icon"
+                    title="Arrow Icon"
+                  />
+                </div>
+                <div class="faq__content--card__answer">
+                  <p>
+                    Click “Forgot password” from the login page or “Change
+                    password” from your profile page. A reset link will be
+                    emailed to you.
+                  </p>
+                </div>
+                <span></span>
               </div>
-              <div class="faq__content--list__card--answer hidden">
-                <p>
-                  No more than 2GB. All files in your account must fit your
-                  allotted storage space.
-                </p>
+              <div class="faq__content--card">
+                <div class="faq__content--card__question">
+                  <p>Can I cancel my subscription?</p>
+                  <img
+                    src="./images/icon-arrow-down.svg"
+                    alt="An orange arrow icon"
+                    title="Arrow Icon"
+                  />
+                </div>
+                <div class="faq__content--card__answer">
+                  <p>
+                    Yes! Send us a message and we’ll process your request no
+                    questions asked.
+                  </p>
+                </div>
+                <span></span>
               </div>
-            </div>
-            <div class="faq__content--list__card faq_content--list__card-3">
-              <div class="faq__content--list__card--question">
-                <p>How do I reset my password?</p>
-                <img
-                  src="./images/icon-arrow-down.svg"
-                  alt="An orange arrow icon"
-                  title="Arrow Icon"
-                />
-              </div>
-              <div class="faq__content--list__card--answer hidden">
-                <p>
-                  Click “Forgot password” from the login page or “Change
-                  password” from your profile page. A reset link will be emailed
-                  to you.
-                </p>
-              </div>
-            </div>
-            <div class="faq__content--list__card faq_content--list__card-4">
-              <div class="faq__content--list__card--question">
-                <p>Can I cancel my subscription?</p>
-                <img
-                  src="./images/icon-arrow-down.svg"
-                  alt="An orange arrow icon"
-                  title="Arrow Icon"
-                />
-              </div>
-              <div class="faq__content--list__card--answer hidden">
-                <p>
-                  Yes! Send us a message and we’ll process your request no
-                  questions asked.
-                </p>
-              </div>
-            </div>
-            <div class="faq__content--list__card faq_content--list__card-5">
-              <div class="faq__content--list__card--question">
-                <p>Do you provide additional support?</p>
-                <img
-                  src="./images/icon-arrow-down.svg"
-                  alt="An orange arrow icon"
-                  title="Arrow Icon"
-                />
-              </div>
-              <div class="faq__content--list__card--answer hidden">
-                <p>
-                  Chat and email support is available 24/7. Phone lines are open
-                  during normal business hours.
-                </p>
+              <div class="faq__content--card">
+                <div class="faq__content--card__question">
+                  <p>Do you provide additional support?</p>
+                  <img
+                    src="./images/icon-arrow-down.svg"
+                    alt="An orange arrow icon"
+                    title="Arrow Icon"
+                  />
+                </div>
+                <div class="faq__content--card__answer">
+                  <p>
+                    Chat and email support is available 24/7. Phone lines are
+                    open during normal business hours.
+                  </p>
+                </div>
+                <span></span>
               </div>
             </div>
           </div>
         </div>
-      </section>
+      </div>
+
       <!-- Footer Component -->
       <footer class="footer">
-        <div class="attribution">
+        <div class="footer__attribution">
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
