completed FAQ-Accordion functionality

--- a/CSS-HTML-projects/FAQ-Accordion/index.html
+++ b/CSS-HTML-projects/FAQ-Accordion/index.html
@@ -51,7 +51,7 @@
             <h1 class="faq__content--title">FAQ</h1>
 
             <div class="faq__content-container">
-              <div class="faq__content--card faq--active">
+              <div class="faq__content--card">
                 <div class="faq__content--card__question">
                   <p>How many team members can I invite?</p>
                   <img
