setting up for loopstudios landing page and markup completed

--- a/CSS-HTML-projects/FAQ-Accordion/index.html
+++ b/CSS-HTML-projects/FAQ-Accordion/index.html
@@ -41,8 +41,9 @@
       <div class="faq-container">
         <div class="faq">
           <!-- FAQ IMAGE -->
-          <div class="faq__image">
+          <div class="faq__collage">
             <img src="./images/illustration-box-desktop.svg" alt="" />
+
             <img src="./images/illustration-woman-online-desktop.svg" alt="" />
             <img src="./images/bg-pattern-desktop.svg" alt="" />
           </div>
